--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 JWT_SECRET = 'secretKey'
+MONGO_URL="mongodb+srv://aayushkhambayate123:Aayush%40123@layshala.tbykx.mongodb.net/Layshala?retryWrites=true&w=majority&appName=Layshala"
